  where SQLExceptions were just being eaten.
- There were also places that ate SQLExceptions for close operations
  on statements, connections, and such that were removed allowing
  the method to throw the Exception.  This may have been the expected
  behavior (don't fail the process if a something simply can't be cleaned
  up).  Note: a bit of clean up was done in DbNodeEntry as well.
  
1.2.6 to 1.2.7
----------------------------------------------------------------------
- If the ifIndex of an interface on a device changes, it is possible
  that an interface with an IP address that is set for collection
  could be set to not collect. This has been fixed.
- If using the new SNMPv1 and SNMPv2 services, the problem listed
  below for 1.2.6 where interfaces set for C get set to N during
  a rescan would occur. This has been fixed.

1.2.5 to 1.2.6
----------------------------------------------------------------------
- Added a new .jsp for the List Nodes page that doesn't include
  interfaces.
- Added a "force version" parameter to collectd.
- When choosing to select SNMP data collection for a node, once the
  changes are applied the web page will go back to the node instead
  of the main Admin page. This improves performance on large systems.
- Fixed an issue where interfaces marked for collection were getting
  set to "N" on a rescan.
- Upgraded MX4J to 3.0.1 (the same version in head) to fix bug #1330.
- Added asset info to the node page and some SNMP-Informant collections.
- Changed OpenNMS so that manage/unmange interfaces deletes active
  outages and does not require a reboot when unmanaging a service.
- Fixed an issue with the Scheduled Outages GUI and Java 5.
- Fixed an issue with data collection when the primary interface is
  on a NIC with other virtual IPs.
- Merged Calendar format reports from 1.3 line.

1.2.4 to 1.2.5
----------------------------------------------------------------------
- Made changes to SNMP data collection to improve both speed and