@@ -100,6 +100,13 @@ final class SnmpThresholder implements ServiceThresholder {
      * 
      */
     private static final int DEFAULT_INTERVAL = 300000; // 300s or 5m
+    
+    /**
+     * Default age before which a data point is considered "out of date"
+     */
+    
+    private static final int DEFAULT_RANGE = 0; // 300s or 5m
+    
 
     /**
      * Interface attribute key used to store the interface's node id
@@ -450,9 +457,10 @@ final class SnmpThresholder implements ServiceThresholder {
         //
         String groupName = ParameterMap.getKeyedString(parameters, "thresholding-group", "default");
         int interval = ParameterMap.getKeyedInteger(parameters, "interval", DEFAULT_INTERVAL);
-
+        int range = ParameterMap.getKeyedInteger(parameters, "range", DEFAULT_RANGE);
+        
         if (log.isDebugEnabled())
-            log.debug("check: service= " + SERVICE_NAME + " address= " + primary.getHostAddress() + " thresholding-group=" + groupName + " interval=" + interval + "ms");
+            log.debug("check: service= " + SERVICE_NAME + " address= " + primary.getHostAddress() + " thresholding-group=" + groupName + " interval=" + interval + "ms range=" + range + " mS");
 
         // RRD Repository attribute
         //
@@ -492,7 +500,7 @@ final class SnmpThresholder implements ServiceThresholder {
         Date dateStamp = new Date();
 
         try {
-            checkNodeDir(nodeDirectory, nodeId, primary, interval, dateStamp, nodeMap, events);
+            checkNodeDir(nodeDirectory, nodeId, primary, interval, range, dateStamp, nodeMap, events);
         } catch (IllegalArgumentException e) {
             log.error("check: Threshold checking failed for primary SNMP interface " + primary.getHostAddress(), e);
             return THRESHOLDING_FAILED;
@@ -562,7 +570,7 @@ final class SnmpThresholder implements ServiceThresholder {
      * @throws IllegalArgumentException
      *             if path parameter is not a directory.
      */
-    private void checkNodeDir(File directory, Integer nodeId, InetAddress primary, int interval, Date date, Map thresholdMap, Events events) throws IllegalArgumentException {
+    private void checkNodeDir(File directory, Integer nodeId, InetAddress primary, int interval, int range, Date date, Map thresholdMap, Events events) throws IllegalArgumentException {
         Category log = ThreadCategory.getInstance(getClass());
 
         // Sanity Check
@@ -591,20 +599,35 @@ final class SnmpThresholder implements ServiceThresholder {
             // Lookup the ThresholdEntity object corresponding
             // to this datasource.
             //
+            
+       
+            
             ThresholdEntity threshold = (ThresholdEntity) thresholdMap.get(datasource);
             if (threshold != null) {
-                // Use RRD JNI interface to "fetch" value of the
-                // datasource from the RRD file
+                if (log.isDebugEnabled())
+                    log.debug("checkNodeDir: threshold checking datasource: " + datasource);
+                // 
+                // fetch the last in range datasource from the RRD file
                 //
                 Double dsValue = null;
                 try {
-                    dsValue = RrdUtils.fetchLastValue(files[i].getAbsolutePath(), interval);
+                	if (range != 0) {
+                		if (log.isDebugEnabled())
+                            log.debug("checking values within " + range + " mS of last possible PDP");
+                		dsValue = RrdUtils.fetchLastValueInRange(files[i].getAbsolutePath(), interval, range);
+                	} else {
+                		if (log.isDebugEnabled())
+                            log.debug("checking value of last possible PDP only");
+                		dsValue = RrdUtils.fetchLastValue(files[i].getAbsolutePath(), interval);
+                	}
                 } catch (NumberFormatException nfe) {
                     log.warn("Unable to convert retrieved value for datasource '" + datasource + "' to a double, skipping evaluation.");
                 } catch (RrdException e) {
                     log.error("An error occurred retriving the last value for datasource '" + datasource + "'", e);
                 }
 
+	        if (log.isDebugEnabled())
+       		     log.debug("checkNodeDir: got a dsValue of : " + dsValue);
                 if (dsValue != null && !dsValue.isNaN()) {
                     // Evaluate the threshold
                     // 
